hit projectile quest