@@ -46,14 +46,14 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.18.1-R0.1-SNAPSHOT</version>
+            <version>1.18.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api</artifactId>
-            <version>2.9.0</version>
+            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -92,8 +92,8 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <move file="C:\Users\basti\Desktop\minecraft\1.18.1\plugins\original-DailyQuests-1.0-SNAPSHOT.jar.bak"
-                                      tofile="C:\Users\basti\Desktop\minecraft\1.18.1\plugins\original-DailyQuests-1.0-SNAPSHOT.jar"/>
+                                <move file="C:\Users\basti\Desktop\minecraft\1.18.2\plugins\original-DailyQuests-1.0-SNAPSHOT.jar.bak"
+                                      tofile="C:\Users\basti\Desktop\minecraft\1.18.2\plugins\original-DailyQuests-1.0-SNAPSHOT.jar"/>
                             </tasks>
                         </configuration>
                     </execution>
@@ -105,8 +105,8 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <move file="C:\Users\basti\Desktop\minecraft\1.18.1\plugins\original-DailyQuests-1.0-SNAPSHOT.jar"
-                                      tofile="C:\Users\basti\Desktop\minecraft\1.18.1\plugins\original-DailyQuests-1.0-SNAPSHOT.jar.bak"/>
+                                <move file="C:\Users\basti\Desktop\minecraft\1.18.2\plugins\original-DailyQuests-1.0-SNAPSHOT.jar"
+                                      tofile="C:\Users\basti\Desktop\minecraft\1.18.2\plugins\original-DailyQuests-1.0-SNAPSHOT.jar.bak"/>
                             </tasks>
                         </configuration>
                     </execution>
@@ -132,7 +132,16 @@
                             <shadedPattern>fr.norrion.daily_quests.nbtapi</shadedPattern>
                         </relocation>
                     </relocations>
-                    <outputDirectory>C:\Users\basti\Desktop\minecraft\1.18.1\plugins</outputDirectory>
+                    <outputDirectory>C:\Users\basti\Desktop\minecraft\1.18.2\plugins</outputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
